# recommender-systems

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
docs/: example metrics.xlsx
notebooks/: exploration.ipynb
res/figures/: sample_recall_precision.json
src/: Introducción.py  testing.ipynb  testing.py  utils.py
src/base/: dataset.py  plotting.py  results.py
src/frontend/: Introducción.py  utils.py
src/frontend/pages/: 1_🏁_Modelos_de_referencia.py  2_💬_Modelos_de_NLP.py  3_🧩_Modelos_de_factorización.py
src/models/: abstract_model.py  ad_hoc_model.py  baseline_model.py  matrix_factorization_model.py  random_model.py  word2vec_model.py
src/pages/: 1_🏁_Modelos_de_referencia.py  2_💬_Modelos_de_NLP.py  3_🧩_Modelos_de_factorización.py  4_♦️_SoTA,_caballo_y_rey.py  5_🎮_Try_me.py
