[tool.poetry]
name = "recommender-systems"
version = "1.0.0"
description = "A project for exploring different Recommender Systems"
authors = ["Jose Antonio Bautista <j.bautista@cathedralsw.com>"]
readme = "README.md"
packages = [{include = "recommender_systems"}]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
plotly = "^5.14.1"
prettytable = "^3.7.0"
scipy = "^1.10.1"
tqdm = "^4.65.0"
gensim = "^4.3.1"
pyarrow = "^12.0.0"
streamlit = "^1.23.1"
streamlit-extras = "^0.2.7"
pyspark = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
